plugins {
    id 'java-library'
    id 'io.qameta.allure' version '2.11.2'
}

group 'org.example'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
    withJavadocJar()
    withSourcesJar()
}

allure {
    version = '2.24.0'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    testImplementation 'io.qameta.allure:allure-junit5:2.24.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.'
    implementation 'org.seleniumhq.selenium:selenium-java:4.12.0'
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'io.appium:java-client:8.5.1'
    implementation 'com.browserstack:browserstack-local-java:1.1.0'
    implementation 'com.google.code.gson:gson:2.10.1'
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
    systemProperty "MOBILE", System.getProperty("MOBILE")
    systemProperty "EXEC", Boolean.getBoolean("EXEC")
    systemProperty "RUN", System.getProperty("RUN")
    systemProperty("junit.jupiter.execution.parallel.enabled", "true")
    systemProperty("junit.jupiter.execution.parallel.config.strategy", "dynamic")
    systemProperty("junit.jupiter.extensions.autodetection.enabled", "true")
}